# tempo

./: .clang-format  .gitignore  CMakeLists.txt  README.md  conanfile.py
lib/: CMakeLists.txt  test_main.cpp
lib/tempo_allocator/: CMakeLists.txt
lib/tempo_allocator/src/: allocator_types.cpp  arena_pool.cpp  memory_allocator.cpp  memory_pool.cpp
lib/tempo_allocator/test/: CMakeLists.txt  memory_pool_tests.cpp
lib/tempo_command/: CMakeLists.txt
lib/tempo_command/src/: command.cpp  command_config.cpp  command_conversions.cpp  command_help.cpp  command_parser.cpp  command_result.cpp  command_tokenizer.cpp  logging_environment.cpp
lib/tempo_command/test/: CMakeLists.txt  command_parser_tests.cpp  command_tests.cpp  command_tokenizer_tests.cpp
lib/tempo_config/: CMakeLists.txt
lib/tempo_config/share/: ConfigLexer.g4  ConfigParser.g4
lib/tempo_config/src/: base_conversions.cpp  config_builder.cpp  config_editor.cpp  config_file_editor.cpp  config_parser.cpp  config_path.cpp  config_result.cpp  config_serde.cpp  config_types.cpp  config_utils.cpp  extend_map.cpp  merge_map.cpp  parse_directories.cpp  program_config.cpp  time_conversions.cpp  validator_node.cpp  validator_types.cpp  workspace_config.cpp
lib/tempo_config/test/: CMakeLists.txt  base_conversions_tests.cpp  config_builder_tests.cpp  config_compare_tests.cpp  config_editor_tests.cpp  config_file_editor_tests.cpp  config_hash_tests.cpp  config_listener_error_handling_tests.cpp  config_listener_tests.cpp  config_serde_tests.cpp  container_conversions_tests.cpp  extend_map_tests.cpp  merge_map_tests.cpp  number_conversions_tests.cpp  piece_printer_tests.cpp  time_conversion_tests.cpp  validator_node_tests.cpp  workspace_config_tests.cpp
lib/tempo_schema/: CMakeLists.txt
lib/tempo_schema/src/: attr.cpp  attr_serde.cpp  path_serde.cpp  schema_result.cpp  url_serde.cpp  vocabulary_cache.cpp
lib/tempo_schema/test/: CMakeLists.txt  attr_value_tests.cpp  bool_attr_serde_tests.cpp  mock_attr_parser.h  mock_attr_writer.h  path_serde_tests.cpp
lib/tempo_security/: CMakeLists.txt
lib/tempo_security/src/: certificate_key_pair.cpp  csr_key_pair.cpp  digest_utils.cpp  ecc_key.cpp  ecc_private_key_generator.cpp  ecdsa_private_key_generator.cpp  ed25519_key.cpp  ed25519_private_key_generator.cpp  generate_utils.cpp  private_key.cpp  rsa_key.cpp  rsa_private_key_generator.cpp  security_result.cpp  security_types.cpp  sha256_hash.cpp  x509_certificate.cpp  x509_certificate_signing_request.cpp  x509_store.cpp
lib/tempo_security/test/: CMakeLists.txt  certificate_key_pair_tests.cpp  csr_key_pair_tests.cpp  digest_tests.cpp  ecc_key_tests.cpp  ed25519_key_tests.cpp  private_key_tests.cpp  rsa_key_tests.cpp  sha256_hash_tests.cpp  x509_certificate_signing_request_tests.cpp  x509_certificate_tests.cpp  x509_store_tests.cpp
lib/tempo_test/: CMakeLists.txt
lib/tempo_test/src/: result_matchers.cpp  status_matchers.cpp  test_main.cpp
lib/tempo_test/test/: CMakeLists.txt  result_matcher_tests.cpp  spanset_matcher_tests.cpp  status_matcher_tests.cpp
lib/tempo_tracing/: CMakeLists.txt
lib/tempo_tracing/share/: spanset.fbs
lib/tempo_tracing/src/: active_scope.cpp  base_scope.cpp  current_scope.cpp  enter_scope.cpp  error_walker.cpp  exit_scope.cpp  leaf_scope.cpp  log_walker.cpp  scope_manager.cpp  span_log.cpp  span_walker.cpp  spanset_attr_parser.cpp  spanset_attr_writer.cpp  spanset_state.cpp  tempo_spanset.cpp  trace_context.cpp  trace_recorder.cpp  trace_span.cpp  tracing_result.cpp  tracing_schema.cpp  tracing_types.cpp
lib/tempo_tracing/test/: CMakeLists.txt  active_scope_tests.cpp  base_tracing_fixture.cpp  base_tracing_fixture.h  current_scope_tests.cpp  enter_scope_tests.cpp  exit_scope_tests.cpp  leaf_scope_tests.cpp  multi_threading_tests.cpp  span_failure_propagation_tests.cpp  span_log_tests.cpp  span_status_tests.cpp  span_timing_tests.cpp  status_span_tests.cpp  trace_context_tests.cpp  trace_span_tests.cpp  unowned_trace_context_tests.cpp
lib/tempo_utils/: CMakeLists.txt
lib/tempo_utils/src/: attr.cpp  attr_result.cpp  big_endian.cpp  bytes_appender.cpp  bytes_iterator.cpp  daemon_process.cpp  date_time.cpp  directory_maker.cpp  fault_handler.cpp  file_appender.cpp  file_lock.cpp  file_reader.cpp  file_result.cpp  file_utilities.cpp  file_writer.cpp  hashing.cpp  hdr_histogram.cpp  library_loader.cpp  library_result.cpp  log_console.cpp  log_helpers.cpp  log_message.cpp  log_sink.cpp  log_stream.cpp  logging.cpp  memory_bytes.cpp  memory_mapped_bytes.cpp  platform.cpp  posix_result.cpp  process_builder.cpp  result.cpp  (+18 more)
tempo_allocator/: CMakeLists.txt
tempo_allocator/test/: CMakeLists.txt  arena_pool_tests.cpp
tempo_command/: CMakeLists.txt
tempo_command/src/: command_config.cpp  command_result.cpp  command_tokenizer.cpp
tempo_command/test/: CMakeLists.txt  command_tokenizer_tests.cpp
tempo_config/test/: CMakeLists.txt  base_conversions_tests.cpp  config_listener_tests.cpp  config_serde_tests.cpp  container_conversions_tests.cpp  program_config_tests.cpp
tempo_tools/: CMakeLists.txt
tempo_tracing/: CMakeLists.txt
tempo_tracing/share/: spanset.fbs
tempo_tracing/src/: active_scope.cpp  log_walker.cpp  root_walker.cpp  span_walker.cpp  spanset_state.cpp  tempo_spanset.cpp  trace_span.cpp  tracing_schema.cpp  tracing_types.cpp
tempo_tracing/test/: CMakeLists.txt
tempo_utils/: CMakeLists.txt
tempo_utils/src/: big_endian.cpp  bytes_appender.cpp  compressed_bitmap.cpp  date_time.cpp  file_appender.cpp  file_utilities.cpp  file_writer.cpp  fp_compensation.cpp  hdr_histogram.cpp  ieee754.cpp  log_message.cpp  logging.cpp  posix_result.cpp  slice.cpp  tempdir_maker.cpp  unicode.cpp  url.cpp  url_authority.cpp  url_origin.cpp  url_path.cpp  uuid.cpp
tempo_utils/test/: CMakeLists.txt  big_endian_tests.cpp  bytes_appender_tests.cpp  bytes_iterator_tests.cpp  ieee754_tests.cpp  logging_tests.cpp  memory_bytes_tests.cpp  memory_mapped_bytes_tests.cpp  prehashed_value_tests.cpp  slice_tests.cpp  status_tests.cpp  unicode_tests.cpp  url_path_tests.cpp  url_tests.cpp  uuid_tests.cpp
(+319 files in other folders)
